DTSRD-4072 committing changes to testcase